--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
         <div class="coding">
             <h3>Application Developer</h3>
             <p>
-                I started coding in my engineering where i wanted to make my own mobile phone,<br> then i became an embedded software
-                deveoper,<br>now embarking my skills by learning full stack web develper.
+                I started coding in my engineering where i wanted to make my own mobile phone,<br> then I became an embedded software
+                developer,<br>now embarking my skills by learning full stack web developer.
             </p>
         </div>
 
